...
    return ListenableBuilder(
      listenable: authManager,
      builder: (context, child) {
        return Scaffold(
          appBar: AppBar(
            title: const Text(
              '登入',
              style: TextStyle(fontWeight: FontWeight.bold),
            ),
          ),
          body: Center(
            child: SingleChildScrollView(
              // 避免鍵盤跳出時擋住畫面
...
